--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
 </head>
 <body>
     <ul id="cat-list"></ul>
+
     <div id="cat">
 
-        <h2 id="cat-name"></h2>
-        <div id="cat-count"></div>
-        <img id="cat-img" src="" alt="cute cat">
+        <h2 data-bind="text: name"></h2>
+        <div data-bind="text: clickCnt"></div>
+        <div data-bind="text: level"></div>
+        <div data-bind="text: callName"></div>
+
+        <table>
+            <thead>
+                <tr><th>name</th><th>type</th></tr>
+            </thead>
+            <tbody data-bind="foreach: callName">
+                <tr>
+                    <td data-bind="text: name"></td>
+                    <td data-bind="text: type"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <img src="" alt="cute cat" data-bind="click: incCounter, attr: {src: imgSrc}">
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
