--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <title>Cat Clicker</title>
 </head>
 <body>
-    <ul id="cat-list"></ul>
+
+    <ul id="cat-list"  data-bind="foreach: catList">
+      <li data-bind="text: name, click: $parent.setCurrentCat"> </li>
+    </ul>
 
     <div id="cat" data-bind="with: currentCat()">
 
         <h2 data-bind="text: name"></h2>
         <div data-bind="text: clickCnt"></div>
         <div data-bind="text: level"></div>
-        <div data-bind="text: callName"></div>
+        <!-- <div data-bind="text: callName"></div> -->
 
         <table>
             <thead>
@@ -26,10 +29,16 @@
             </tbody>
         </table>
 
+        <form>
+
+        </form>
+
         <img src="" alt="cute cat" data-bind="click: $parent.incCounter, attr: {src: imgSrc}">
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/app.js"></script>
+
+    <!-- <script src="chai.js" type="text/javascript"></script> -->
 </body>
 </html>
